final project finished push

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         --color-clifford: #da373d;
       }
     </style>
-  <title>React App</title>
+  <title>Photofolio</title>
 </head>
 
 <body>
